# scipion-em-carbonara

./: CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: publish_and_tag.yml
carbonara/: __init__.py  bibtex.py  constants.py  protocols.conf
carbonara/protocols/: __init__.py  protocol_sampling_sequence.py
carbonara/tests/: __init__.py  test_protocol_carbonara_sampling_sequence  test_protocol_carbonara_sampling_sequence.py
carbonara/viewers/: __init__.py  carbonara_sampling_sequence_viewer.py
carbonara/wizards/: __init__.py  wizard_carbonara.py
