[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-carbonara"
dynamic = ["version", "dependencies"]

authors = [
    {name = "Roberto Marabini", email = "roberto@cnb.csic.es"},
    {name = "Marta Martinez", email = "mmmtnez@cnb.csic.es"},
]
description = "Plugin to run CARBonAra within the Scipion framework"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["scipion", "electron-microscopy", "cryo-em", "structural-biology", "image-processing", "scipion-3.0", "carbonara"]
license = {text = "GNU General Public License v3 (GPLv3)"}

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-carbonara"
Repository = "https://github.com/scipion-em/scipion-em-carbonara"
Issues = "https://github.com/scipion-em/scipion-em-carbonara/issues"

[tool.setuptools.package-data]
"carbonara" = ["protocols.conf", "icon.png"]

[project.entry-points."pyworkflow.plugin"]
carbonara = "carbonara"

[tool.setuptools.dynamic]
version = {attr = "carbonara.__version__"}
dependencies = {file = ["requirements.txt"]}

